fix(homepage): fix alignment of boxes on homepage
Fixes #18

--- a/sass/homepage.scss
+++ b/sass/homepage.scss
@@ -207,6 +207,7 @@
 			}
 
 			p{
+				text-align: start;
 				color: #838d8f;
 				font-size: 24px;
 				margin-bottom: 20px;
