--- a/sass/pricing.scss
+++ b/sass/pricing.scss
@@ -68,7 +68,7 @@
 
 		.content{
 			padding: 40px 43px 31px 43px;
-			text-align: left;
+			text-align: start;
 
 			h3{
 				color: #3c3d41;
